--- a/README.org
+++ b/README.org
@@ -31,6 +31,7 @@ Usage:
   pkr script new <script> [--verbose]
   pkr self check-update
   pkr self update
+  pkr pkg list [--dir=<list-dir>]
   pkr -h | --help
   pkr -v | --version
 
@@ -46,6 +47,7 @@ Arguments:
 
 Options:
   --global         Use global package installation location
+  --dir=<list-dir> Directory to list packages for [default: ./]
   --verbose        Don't suppress output
   -h --help        Print this help
   -v --version     Show version number
